# DiscordBot

./: Cargo.toml
src/: .main.rs.rustfmt  commands.rs  lib.rs  main.rs  sql.rs
